# energy-testing

./: .gitignore  README.md  __init__.py  penalty_model.py  pyproject.toml  report_engine.py
examples/: basic_simulation.py  mock_systems_demo.py
faults/: __init__.py  control_lag.py  inverter_loss.py  mode_misclassification.py  soe_bias.py  telemetry_drop.py
harness/: arrears_engine.py  control_loop.py  decision_trace.py  invariants.py  message_bus.py
models/: __init__.py  energy.py
scenarios/: __init__.py  fast_df_dt.json  oscillatory_frequency.json  partial_capacity.json  prolonged_event.json  scenario_loader.py
simulators/: __init__.py  grid.py  mocks.py
src/energy_testing/: __init__.py  test_constants.py
src/energy_testing/harness/: __init__.py  arrears_engine.py  stubs.py  time_control.py
src/energy_testing/models/: energy.py
src/energy_testing/services/: __init__.py
src/energy_testing/simulators/: grid.py  mocks.py
test_resources/c_helpers/: network_fault.c
tests/: __init__.py  conftest.py  test_arrears_harness.py  test_clib_network_fault.py  test_constants.py  test_grid.py  test_mocks.py  test_penalty_revenue.py
utils/: __init__.py
