[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-testing"
version = "0.1.0"
description = "A testing framework for energy distribution systems"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0.0",
    "aiohttp",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pylint",
    "pytest-cov",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
